welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:7: error: value / is not a member of Boolean
	while(!estSurBiscuit / !estFaceMur)
                             ^